# RAG-local

./: CLAUDE.md  README.md  config.yaml  local-rag-plan-old.md  local-rag-plan.md  prompt.md  pyproject.toml
.claude/: settings.local.json
src/: app.py  config.py  embedder.py  llm.py  loader.py  rag.py  vectorstore.py
vectordb/: .indexed_files.json  chroma.sqlite3
