[project]
name = "local-rag"
version = "0.1.0"
description = "轻量级本地 RAG 系统"
requires-python = ">=3.12"
dependencies = [
    "sentence-transformers>=2.2.0",
    "chromadb>=0.4.0",
    "openai>=1.0.0",
    "gradio>=4.0.0",
    "PyMuPDF>=1.23.0",
    "python-docx>=0.8.11",
    "pyyaml>=6.0",
    "anthropic>=0.100.0",
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true
